<resources>
    <string name="app_name">HeadsUp</string>
    <string name="hello_world">Hello, World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background_image_description">Greetings Background</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logo_description">Logo without background</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="enter_mobile_number_or_email">Enter mobile number or email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="new_here">New Here?</string>
    <string name="register_now">Register Now</string>
    <string name="greeting_screen_message">Find people near you, get into nearby activities, socialize, meetups.</string>
    <string name="welcome_nplease_enter_the_details">Welcome, \nPlease enter the details</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="enter_your_email_id">Enter your email ID</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="back_button">Back Button</string>
    <string name="and">and</string>
    <string name="by_registering_you_accept_our">By registering, you accept our</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_here">Login here</string>
    <string name="register_input_blank_message">Name, Email, and Password cannot be empty.</string>
    <string name="home_screen">Home screen</string>
    <string name="search_screen">Search screen</string>
    <string name="create_post_screen">Create post screen</string>
    <string name="activity_screen">Activity screen</string>
    <string name="profile_screen">Profile screen</string>
    <string name="left_button_description">Header left button</string>
    <string name="title_icon_description">Header title icon</string>
    <string name="right_button_description">Header right button</string>
    <string name="near_you">Near you</string>
    <string name="like">Like button</string>
    <string name="comment">Comment button</string>
    <string name="share">Share button</string>
    <string name="unknown_author">Unknown</string>
    <string name="comment_avatar_author">Avatar of comment\'s author</string>
    <string name="like_button">Like Button</string>
    <string name="type_a_comment_here">Type a comment here...</string>
    <string name="send">Send</string>
    <string name="post_menu">Post Menu</string>
    <string name="be_the_first_to_comment">Be the first one to share your thoughts!</string>
    <string name="back_button_description">Back button</string>
    <string name="profile_menu">Profile menu</string>
    <string name="headsup_user">HeadsUp User</string>
    <string name="message_user">Message User</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="already_liked_button">Already liked button</string>
    <string name="share_post_title">Share Post</string>
    <string name="user_s_name">User\'s name</string>
    <string name="search_for_users">Search for users</string>
    <string name="no_user_found">No user found</string>
    <string name="type_name_to_search">Type a name</string>
    <string name="type_to_search_users">Type to search users</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="no_conversations_to_display">No conversations to display</string>
    <string name="enter_message">Enter message</string>
    <string name="go_back_to_previous_screen">Go back to previous screen</string>
    <string name="type_a_message_here">Type a message here...</string>
    <string name="send_message">Send message</string>
    <string name="example">Example</string>
    <string name="write_a_text">Write a text</string>
    <string name="messages">Messages</string>
    <string name="menu">Menu</string>
    <string name="retry">Retry</string>
    <string name="loding">Loding...</string>
    <string name="loading">Loading</string>
    <string name="encouraging_message">Empty chat? Not for long! Start by typing something below.</string>
    <string name="new_post">New post</string>
    <string name="enter_your_post">What\'s new with you today?</string>
    <string name="post_button">Post</string>
    <string name="post_caption_character_count">0/250</string>
    <string name="no_posts_yet">User hasn\'t posted yet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_username">Edit username</string>
    <string name="username">Username</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="recover_password">Recover Password</string>
    <string name="log_out">Log out</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="share_this_app">Share this app</string>
    <string name="settings">Settings</string>
    <string name="go_back">Go Back</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="start_posting_now">Start posting now!</string>
    <string name="so_empty_start_posting_now">So empty, Start posting now!</string>
    <string name="report">Report</string>
    <string name="this_post_was_reported">This post was reported</string>
    <string name="delete">Delete</string>
    <string name="this_post_was_deleted">This post was deleted</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="user_blocked">User blocked</string>
    <string name="no_activity">No activity</string>
    <string name="username_placeholder">username</string>
    <string name="mobile_number_placeholder">Mobile number</string>
</resources>