<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/arrow_circle_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/white_circle"
        android:padding="8dp"
        android:src="@drawable/arrow_back_outline_white"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_nplease_enter_the_details"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/please_enter_your_name"
            android:textColor="@android:color/white"
            android:textColorHint="@color/gray_600" />

        <EditText
            android:id="@+id/emaiEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_your_email_id"
            android:textColor="@android:color/white"
            android:textColorHint="@color/gray_600" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/please_enter_a_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/gray_600" />

        <TextView
            android:id="@+id/errorMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerNowTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_here"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/registerNowClickableButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:paddingVertical="0dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/register_now"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/termsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/terms"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/circle_shape" />

            <Button
                android:id="@+id/privacyPolicyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>



